--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <script>
         // Load JSON data
-        fetch('org_chart_data.json')
+        fetch('https://robert85utsw.github.io/revcycleleadership//org_chart_data.json')
             .then(response => response.json())
             .then(data => {
                 let root = d3.stratify()
